# IQFeedClient

./: CMakeLists.txt  LICENSE  OpenInVisualStudio.bat  README.md
Include/: connection.h  iqConnectConnection.h  iqFeedClient.h  processManager.h  protectedBuffer.h  socketThread.h
Settings/: settings.ini
Source/: connection.cpp  iqConnectConnection.cpp  iqFeedClient.cpp  main.cpp  processManager.cpp  protectedBuffer.cpp  socketThread.cpp
